--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "Presentation slides.",
   "main": "index.js",
   "scripts": {
-    "start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
+    "start": "tsc && concurrently \"npm run tsc:w\" \"npm run css:w\" \"npm run lite\"",
     "lite": "lite-server",
     "postinstall": "typings install",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
+    "css": "node build-css",
+    "css:w": "node build-css --watch",
     "typings": "typings"
   },
   "keywords": [
@@ -24,15 +26,22 @@
     "@angular/http": "2.0.0-rc.1",
     "@angular/platform-browser": "2.0.0-rc.1",
     "@angular/platform-browser-dynamic": "2.0.0-rc.1",
-    "systemjs": "0.19.27",
     "core-js": "^2.4.0",
+    "normalize.css": "^4.1.1",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
+    "systemjs": "0.19.27",
     "zone.js": "^0.6.12"
   },
   "devDependencies": {
+    "bluebird": "^3.4.0",
+    "chokidar": "^1.5.2",
     "concurrently": "^2.0.0",
+    "glob": "^7.0.3",
     "lite-server": "^2.2.0",
+    "postcss": "^5.0.21",
+    "postcss-scss": "^0.1.8",
+    "precss": "^1.4.0",
     "typescript": "^1.8.10",
     "typings": "^1.0.4"
   }
