--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/platform-browser-dynamic": "2.0.0-rc.1",
     "core-js": "^2.4.0",
     "normalize.css": "^4.1.1",
+    "prismjs": "^1.5.1",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
     "systemjs": "0.19.27",
