--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Presentation slides.",
   "main": "index.js",
   "scripts": {
-    "start": "tsc && concurrently \"npm run tsc:w\" \"npm run css:w\" \"npm run lite\"",
+    "start": "tsc && npm run css && concurrently \"npm run tsc:w\" \"npm run css:w\" \"npm run lite\"",
     "lite": "lite-server",
     "postinstall": "typings install",
     "tsc": "tsc",
